<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="800dp"
        android:layout_height="800dp"
        android:adjustViewBounds="true"
        android:contentDescription="my picture"
        android:src="@drawable/profile_picture"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="Michael"
        android:textColor="@color/white"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="20dp"
        android:textSize="40sp"
        android:fontFamily="@font/inter_semibold"/>

    <TextView
        android:id="@+id/nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="00000033572"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_regular"/>

    <TextView
        android:id="@+id/kelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="FL"
        app:layout_constraintTop_toBottomOf="@id/nim"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_regular"/>

    <TextView
        android:id="@+id/shape"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toBottomOf="@id/kelas"
        android:layout_marginTop="30dp"
        android:background="@drawable/card"/>

    <TextView
        android:id="@+id/references"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/shape"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="References"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/inter_semibold"/>
        
    <TextView
        android:id="@+id/ref1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/references"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@font/inter_semibold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/ref1"/>

    <TextView
        android:id="@+id/ref2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ref1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@font/inter_semibold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/ref2"/>

    <TextView
        android:id="@+id/ref3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ref2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@font/inter_semibold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/ref3"/>

    <TextView
        android:id="@+id/ref4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ref3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@font/inter_semibold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/ref4"/>

    <TextView
        android:id="@+id/ref5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ref4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@font/inter_semibold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/ref5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>